welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:16: error: type YELLOW is not a member of object java.awt.Color
def faireV(c:Color.YELLOW){
                   ^MethodsPicture:6: error: type YELLOW is not a member of object java.awt.Color
	faireV(c:Color.YELLOW);
                       ^MethodsPicture:7: error: type RED is not a member of object java.awt.Color
	faireV(c:Color.RED);
                       ^MethodsPicture:8: error: type BLUE is not a member of object java.awt.Color
	faireV(c:Color.BLUE);
                       ^MethodsPicture:9: error: type GREEN is not a member of object java.awt.Color
	faireV(c:Color.GREEN);	
                       ^MethodsPicture:18: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
setCouleurBrosse();
                ^