welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	for (tout <- 1 to 3){
	for (ligne <-1 to 3){
	{
	faireV(c:Color.YELLOW);
	faireV(c:Color.RED);
	faireV(c:Color.BLUE);
	faireV(c:Color.GREEN);	
	}

	}

	}
}
def faireV(c:Color.YELLOW){
	avance();
setCouleurBrosse();
baisseBrosse();
gauche();
leveBrosse();
avance();
droite();
avance();
baisseBrosse();
droite();
leveBrosse();
avance();
gauche();
avance();
baisseBrosse();
leveBrosse();
avance();
gauche();
}